Prueba despliegue automático

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <h2>Contacto</h2>
         <p>¿Tienes dudas o quieres implementar algo similar? Puedes contactarme o probarlo tú mismo.</p>
         <p><strong>Email:</strong> ejemplo@correo.com</p>
-        <p><strong>GitHub:</strong> <a href="https://github.com/" target="_blank">https://github.com/</a></p>
+        <p><strong>GitHub:</strong> <a href="https://github.com/Fennex10" target="_blank">https://github.com/</a></p>
     </section>
 
     <footer>
